# Thesis

./: Example_ZSL.ipynb  FZSL_Train_example.ipynb  GridSearch.py  HPTune.ipynb  LICENSE  README.md  RegularClassifier.ipynb  RegularClassifierCNN.ipynb  RegularClassifierMLP.ipynb  setup.cfg
Models/: Models.txt
logs/2024-08-07_13-29-32/: events.out.tfevents.1723030174.kermitgpu-01.32663.0  hparams.yaml
logs/2024-08-19_16-58-50/: events.out.tfevents.1724079530.kermitgpu-01.6878.4  hparams.yaml
logs/2024-08-19_17-28-22/: events.out.tfevents.1724081302.kermitgpu-01.6878.5  hparams.yaml
logs/2024-08-19_18-42-34/: events.out.tfevents.1724085755.kermitgpu-01.16587.0  hparams.yaml
maldi_zsl/: README.md  blocks.py  data.py  models.py
maldi_zsl/scripts/: generate_splits.py  process_LMUGent.py
maldi_zsl/utils/: split_0.txt  split_1.txt  split_2.txt  split_3.txt  split_4.txt  (+5 more)
maldi_zsl_edit/: blocks.py  data.py  models.py  utils.py
results/: hptune_2024-08-14_11-11-47.txt  hptune_2024-08-15_15-23-42.txt  hptune_2024-08-16_09-16-52.txt  hptune_2024-08-16_17-00-47.txt  hptune_2024-08-16_23-33-28.txt  hptune_2024-08-17_13-32-39.txt  hptune_2024-08-17_14-03-58.txt  hptune_2024-08-17_14-51-09.txt  hptune_2024-08-17_14-52-14.txt  hptune_2024-08-17_15-02-58.txt  hptune_2024-08-17_15-29-27.txt  summary_hptune_2024-08-15_15-23-42.txt  summary_hptune_2024-08-16_17-00-47.txt  summary_hptune_2024-08-16_23-33-28.txt  summary_hptune_2024-08-17_14-03-58.txt  summary_hptune_2024-08-17_14-52-14.txt  summary_hptune_2024-08-17_15-02-58.txt  summary_hptune_2024-08-17_15-29-27.txt
(+3 files in other folders)
