
[metadata]
name = maldi-zsl
author = Jorge
description = Thesis on zero-shot learning for MALDI-TOF data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JICV4/Thesis
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    numpy
    torch
    lightning
    lpsn
    biopython
    pandas
    tqdm
    maldi_nn
    h5torch